# cpp-starter

./: CMakeLists.txt  README.md
common-lib/: CMakeLists.txt  base64.cpp  base64.h
src/: CMakeLists.txt  main.cpp  project.cpp  project.h
test/: CMakeLists.txt  testMain.cpp
test/unit/common-lib/: base64.cpp
test/unit/src/: main.cpp
